# microcloud

./: .gitignore  .golangci.yaml  .jujuignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  go.mod  go.sum  snapcraft.yaml  staticcheck.conf
.github/: .jira_sync_config.yaml  CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md  renovate.json
api/: cluster_manager.go  cluster_manager_client.go  cluster_manager_config.go  cluster_manager_task.go  components.go  components_auth.go  components_cluster.go  components_proxy.go  components_tokens.go  response.go  services.go  services_auth.go  services_cluster.go  services_proxy.go  services_tokens.go  session.go  session_join.go  session_stop.go  status.go
client/: client.go  cluster_manager_client.go  proxy.go  websocket.go
component/: component_handler.go  interface.go  lxd.go  lxd_config.go  lxd_join.go  lxd_test.go  microceph.go  microcloud.go  microovn.go  session.go  system_information.go  test_wordlist.go  version.go  version_test.go  wordlist.go
database/: cluster_manager.mapper.go  cluster_manager_config.go  cluster_manager_schema.go  cluster_manager_table.go  sites.mapper.go  sites_schema.go  sites_table.go
doc/: .custom_wordlist.txt  .gitignore  .readthedocs.yaml  Makefile  (+14 more)
microcloud/charms/: CONTRIBUTING.md  LICENSE  README.md  config.yaml  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
microcloud/charms/setup/: README.md  lxd.conf  maas-cloud.yaml  maas-setup.sh
microcloud/charms/setup/local-maas-image-server/: nginx.conf  run.sh
microcloud/charms/src/: charm.py
(+273 files in other folders)
